reduzindo dependência com a plataforma